tests/snapshots/sqlparser_snapshot__generic__tpch_02.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: s_acctbal
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: s_name
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: n_name
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: p_partkey
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: p_mfgr
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: s_address
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: s_phone
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: s_comment
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: part
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: supplier
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: partsupp
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: nation
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: region
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      BinaryOp:
                        left:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  BinaryOp:
                                    left:
                                      BinaryOp:
                                        left:
                                          Identifier:
                                            value: p_partkey
                                            quote_style: ~
                                        op: Eq
                                        right:
                                          Identifier:
                                            value: ps_partkey
                                            quote_style: ~
                                    op: And
                                    right:
                                      BinaryOp:
                                        left:
                                          Identifier:
                                            value: s_suppkey
                                            quote_style: ~
                                        op: Eq
                                        right:
                                          Identifier:
                                            value: ps_suppkey
                                            quote_style: ~
                                op: And
                                right:
                                  BinaryOp:
                                    left:
                                      Identifier:
                                        value: p_size
                                        quote_style: ~
                                    op: Eq
                                    right:
                                      Value:
                                        Number:
                                          - "15"
                                          - false
                            op: And
                            right:
                              Like:
                                negated: false
                                expr:
                                  Identifier:
                                    value: p_type
                                    quote_style: ~
                                pattern:
                                  Value:
                                    SingleQuotedString: "%BRASS"
                                escape_char: ~
                        op: And
                        right:
                          BinaryOp:
                            left:
                              Identifier:
                                value: s_nationkey
                                quote_style: ~
                            op: Eq
                            right:
                              Identifier:
                                value: n_nationkey
                                quote_style: ~
                    op: And
                    right:
                      BinaryOp:
                        left:
                          Identifier:
                            value: n_regionkey
                            quote_style: ~
                        op: Eq
                        right:
                          Identifier:
                            value: r_regionkey
                            quote_style: ~
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: r_name
                        quote_style: ~
                    op: Eq
                    right:
                      Value:
                        SingleQuotedString: EUROPE
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: ps_supplycost
                    quote_style: ~
                op: Eq
                right:
                  Subquery:
                    with: ~
                    body:
                      Select:
                        distinct: ~
                        top: ~
                        projection:
                          - UnnamedExpr:
                              Function:
                                name:
                                  - value: min
                                    quote_style: ~
                                args:
                                  - Unnamed:
                                      Expr:
                                        Identifier:
                                          value: ps_supplycost
                                          quote_style: ~
                                filter: ~
                                null_treatment: ~
                                over: ~
                                distinct: false
                                special: false
                                order_by: []
                        into: ~
                        from:
                          - relation:
                              Table:
                                name:
                                  - value: partsupp
                                    quote_style: ~
                                alias: ~
                                args: ~
                                with_hints: []
                                version: ~
                                partitions: []
                            joins: []
                          - relation:
                              Table:
                                name:
                                  - value: supplier
                                    quote_style: ~
                                alias: ~
                                args: ~
                                with_hints: []
                                version: ~
                                partitions: []
                            joins: []
                          - relation:
                              Table:
                                name:
                                  - value: nation
                                    quote_style: ~
                                alias: ~
                                args: ~
                                with_hints: []
                                version: ~
                                partitions: []
                            joins: []
                          - relation:
                              Table:
                                name:
                                  - value: region
                                    quote_style: ~
                                alias: ~
                                args: ~
                                with_hints: []
                                version: ~
                                partitions: []
                            joins: []
                        lateral_views: []
                        selection:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  BinaryOp:
                                    left:
                                      BinaryOp:
                                        left:
                                          BinaryOp:
                                            left:
                                              Identifier:
                                                value: p_partkey
                                                quote_style: ~
                                            op: Eq
                                            right:
                                              Identifier:
                                                value: ps_partkey
                                                quote_style: ~
                                        op: And
                                        right:
                                          BinaryOp:
                                            left:
                                              Identifier:
                                                value: s_suppkey
                                                quote_style: ~
                                            op: Eq
                                            right:
                                              Identifier:
                                                value: ps_suppkey
                                                quote_style: ~
                                    op: And
                                    right:
                                      BinaryOp:
                                        left:
                                          Identifier:
                                            value: s_nationkey
                                            quote_style: ~
                                        op: Eq
                                        right:
                                          Identifier:
                                            value: n_nationkey
                                            quote_style: ~
                                op: And
                                right:
                                  BinaryOp:
                                    left:
                                      Identifier:
                                        value: n_regionkey
                                        quote_style: ~
                                    op: Eq
                                    right:
                                      Identifier:
                                        value: r_regionkey
                                        quote_style: ~
                            op: And
                            right:
                              BinaryOp:
                                left:
                                  Identifier:
                                    value: r_name
                                    quote_style: ~
                                op: Eq
                                right:
                                  Value:
                                    SingleQuotedString: EUROPE
                        group_by:
                          Expressions: []
                        cluster_by: []
                        distribute_by: []
                        sort_by: []
                        having: ~
                        named_window: []
                        qualify: ~
                    order_by: []
                    limit: ~
                    limit_by: []
                    offset: ~
                    fetch: ~
                    locks: []
        group_by:
          Expressions: []
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: s_acctbal
            quote_style: ~
        asc: false
        nulls_first: ~
      - expr:
          Identifier:
            value: n_name
            quote_style: ~
        asc: ~
        nulls_first: ~
      - expr:
          Identifier:
            value: s_name
            quote_style: ~
        asc: ~
        nulls_first: ~
      - expr:
          Identifier:
            value: p_partkey
            quote_style: ~
        asc: ~
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

