tests/snapshots/sqlparser_snapshot__generic__tpch_04.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: o_orderpriority
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: count
                      quote_style: ~
                  args:
                    - Unnamed: Wildcard
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: order_count
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: orders
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      Identifier:
                        value: o_orderdate
                        quote_style: ~
                    op: GtEq
                    right:
                      TypedString:
                        data_type: Date
                        value: 1993-07-01
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: o_orderdate
                        quote_style: ~
                    op: Lt
                    right:
                      BinaryOp:
                        left:
                          TypedString:
                            data_type: Date
                            value: 1993-07-01
                        op: Plus
                        right:
                          Interval:
                            value:
                              Value:
                                SingleQuotedString: "3"
                            leading_field: Month
                            leading_precision: ~
                            last_field: ~
                            fractional_seconds_precision: ~
            op: And
            right:
              Exists:
                subquery:
                  with: ~
                  body:
                    Select:
                      distinct: ~
                      top: ~
                      projection:
                        - Wildcard:
                            opt_exclude: ~
                            opt_except: ~
                            opt_rename: ~
                            opt_replace: ~
                      into: ~
                      from:
                        - relation:
                            Table:
                              name:
                                - value: lineitem
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                      lateral_views: []
                      selection:
                        BinaryOp:
                          left:
                            BinaryOp:
                              left:
                                Identifier:
                                  value: l_orderkey
                                  quote_style: ~
                              op: Eq
                              right:
                                Identifier:
                                  value: o_orderkey
                                  quote_style: ~
                          op: And
                          right:
                            BinaryOp:
                              left:
                                Identifier:
                                  value: l_commitdate
                                  quote_style: ~
                              op: Lt
                              right:
                                Identifier:
                                  value: l_receiptdate
                                  quote_style: ~
                      group_by:
                        Expressions: []
                      cluster_by: []
                      distribute_by: []
                      sort_by: []
                      having: ~
                      named_window: []
                      qualify: ~
                  order_by: []
                  limit: ~
                  limit_by: []
                  offset: ~
                  fetch: ~
                  locks: []
                negated: false
        group_by:
          Expressions:
            - Identifier:
                value: o_orderpriority
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: o_orderpriority
            quote_style: ~
        asc: ~
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

